# coinbase-grid-bot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml
config/: cloud.yaml  default.yaml  kraken_futures.yaml  railway.yaml
deploy/: firewall.sh  setup.sh
src/: main.py
src/backtest/: data_loader.py  engine.py  report.py  simulator.py
src/bot/: futures_orchestrator.py  orchestrator.py
src/config/: schema.py  settings.py
src/dashboard/: app.py
src/dashboard/routes/: api.py  controls.py  futures_api.py  ws.py
src/dashboard/static/: app.js  index.html  style.css
src/db/: database.py  migrations.py  repositories.py
src/exchange/: base.py  connector.py  kraken_futures_connector.py  models.py  paper_connector.py  rate_limiter.py
src/intelligence/: btc_dominance.py  fear_greed.py  lunarcrush.py  rsi.py  social_trending.py  volume_tracker.py  whale_detector.py
src/orders/: manager.py
src/position/: tracker.py
src/risk/: manager.py  position_stop_loss.py
src/strategy/: dip_sniper.py  dynamic_pair_selector.py  futures_grid_engine.py  grid_engine.py  grid_math.py  momentum_rider.py  pair_rotator.py  trend_filter.py
src/utils/: decorators.py  logging.py
src/xbot/: __init__.py  __main__.py  cli.py  reply_analyzer.py  reply_generator.py  x_client.py
tests/: conftest.py  test_backtest_engine.py  test_database.py  test_grid_engine.py  test_grid_math.py  test_order_manager.py  test_risk_manager.py
