[project]
name = "coinbase-grid-bot"
version = "0.1.0"
description = "Grid trading bot for Coinbase with backtesting and web dashboard"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30",
    "websockets>=13.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
gridbot = "src.main:cli"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
